Snav: Ensure spatnav uses the visual viewport as starting point

When a page is opened, unless the page auto-focuses an element,
the document <body> is the activeElement (aka focused element).

In this case, spatnav uses heuristics in its search for the next
focusable element to navigate to: the search starts at the visual
viewport.

This fixes the regression (caused by an adaption to root layer
scrolling) described in the bug as well as adding 3 automated
tests that check that spatnav correctly uses the visual viewport.

Bug: 796493

Change-Id: Ie6cd71deaf1d7d7b100792feeaef57ab3fbff903
Reviewed-on: https://chromium-review.googlesource.com/847513
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Hugo Holgersson <hugoh@vewd.com>
Cr-Commit-Position: refs/heads/master@{#526655}
Former-commit-id: 260ccf1f403ad366a62fc2cd3a5a6831426cab06